bug 431642 - Put back state change event when doc starts loading (e. g. when pressing ENTER on a link) Patch by Alexander Surkov (surkov.alexander@gmail.com) r=me r=aaronlev a1.9=beltzner